# openSSA

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.py  pyproject.toml  setup.py  test.py
.github/workflows/: ci.yaml
src/basic_math/: __init__.py  _version.py  add.cpp
src/openSSA/: Makefile  __init__.py  add.cpp
