[build-system]
requires = [
  "scikit-build-core>=0.9",
  "pybind11>=2.12",
  "setuptools-scm>=8",       # git-tag-based versioning
]
build-backend = "scikit_build_core.build"

# ---------------------------------------------------------------------------
# Project metadata (PEP 621)
# All fields here end up in the wheel's METADATA and on PyPI.
# ---------------------------------------------------------------------------
[project]
name = "basic-math"                        # PyPI distribution name (kebab-case)
dynamic = ["version"]                      # version comes from git tags via setuptools-scm
description = "A minimal pybind11 C++ extension example"
readme = "README.md"
license = { text = "MIT" }                 # SPDX short identifier
authors = [
  { name = "Your Name", email = "you@example.com" },
]
keywords = ["pybind11", "C++", "extension"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: C++",
  "Topic :: Scientific/Engineering",
]
requires-python = ">=3.9"
dependencies = []                          # no pure-Python runtime deps for this example

[project.optional-dependencies]
test = ["pytest>=7"]

[project.urls]
Homepage      = "https://github.com/yourname/basic-math"
Documentation = "https://github.com/yourname/basic-math#readme"
Repository    = "https://github.com/yourname/basic-math"
"Bug Tracker" = "https://github.com/yourname/basic-math/issues"

# ---------------------------------------------------------------------------
# scikit-build-core configuration
# ---------------------------------------------------------------------------
[tool.scikit-build]
# Minimum scikit-build-core version guard (redundant with build-system.requires
# but documents intent clearly).
minimum-version = "build-system.requires"

# Write the version string generated by setuptools-scm into a _version.py
# that __init__.py can import.
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["src/basic_math/_version.py"]

# ---------------------------------------------------------------------------
# setuptools-scm: derive version from the most recent git tag (e.g. v0.1.0)
# ---------------------------------------------------------------------------
[tool.setuptools_scm]
write_to = "src/basic_math/_version.py"
# Strip the leading 'v' so the version is "0.1.0", not "v0.1.0".
version_scheme = "guess-next-dev"
local_scheme  = "no-local-version"        # clean versions for PyPI uploads

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]