[build-system]
requires = [
  "scikit-build-core>=0.9",
  "pybind11>=2.12",
  "mpi4py"
]
build-backend = "scikit_build_core.build"

# ---------------------------------------------------------------------------
# Project metadata (PEP 621)
# All fields here end up in the wheel's METADATA and on PyPI.
# ---------------------------------------------------------------------------
[project]
name = "openSSA"                        # PyPI distribution name (kebab-case)
description = " Suite for simulation of stochastic populations (chemical, neutronic, etc.) using Gillespie's Stochastic Simulation Algorithm (SSA), tau-leaping, and related tools. "
readme = "README.md"
license = { text = "BSD-3-Clause" }                 # SPDX short identifier
authors = [
  { name = "Kyle Hansen", email = "khansen3@ncsu.edu" },
]
keywords = ["Stochastic Chemical Kinetics", "Monte Carlo"]
version = "0.0.0"
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: C++",
  "Topic :: Scientific/Engineering",
]
requires-python = ">=3.14"
dependencies = []                          # no pure-Python runtime deps for this example

[project.optional-dependencies]
test = ["pytest>=7"]

[project.urls]
Homepage      = "https://github.com/hankyleh/openSSA"
Documentation = "https://github.com/hankyleh/openSSA/blob/main/README.md"
Repository    = "https://github.com/hankyleh/openSSA"
"Bug Tracker" = "https://github.com/hankyleh/openSSA/issues"

# ---------------------------------------------------------------------------
# scikit-build-core configuration
# ---------------------------------------------------------------------------
[tool.scikit-build]
# Minimum scikit-build-core version guard (redundant with build-system.requires
# but documents intent clearly).
minimum-version = "build-system.requires"

# Write the version string generated by setuptools-scm into a _version.py
# that __init__.py can import.
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["src/basic_math/_version.py"]

